k8s_deployments/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways: 
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /ui
    - uri:
        exact: /getShippment
    - uri:
        exact: /getCarrier
    route:
    - destination:
        host: client
        port:
          number: 5000
      weight: 100
  - match:
    - uri:
        exact: /Carrier/GetCarrier
    route:
    - destination:
        host: carrier
        port: 
          number: 50052 
      weight: 100
  - match:
    - uri:
        exact: /Shipment/GetShipment
    - uri:
        exact: /Shipment/GetCarrierForShipment
    route:
    - destination:
        host: shippment
        port:
          number: 50051
      weight: 100
